[Backport release/v0.23] [compose] Fix Composition leak in ViewAnnotation cleanup (#12493)
GitOrigin-RevId: fdd90cf3cd77525fabd21942f3b4681712b05702